--- a/plugins/bitwarden/plugin.spec.yaml
+++ b/plugins/bitwarden/plugin.spec.yaml
@@ -7,8 +7,9 @@ description: Bitwarden is an integrated open source password management solution
 version: 1.0.0
 vendor: rapid7
 support: rapid7
+cloud_ready: true
 status: []
-supported_versions: ["Bitwarden 2023-01-10"]
+supported_versions: ["Cloud-hosted Bitwarden instance 2023.1.1"]
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/bitwarden
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
@@ -20,7 +21,7 @@ tags:
 - password
 hub_tags:
   use_cases: [credential_management, data_utility]
-  keywords: [bitwarden, api, access_control, password]
+  keywords: [bitwarden, api, access_control, password, cloud_enabled]
   features: []
 
 types:
