--- a/plugins/samanage/plugin.spec.yaml
+++ b/plugins/samanage/plugin.spec.yaml
@@ -405,6 +405,23 @@ actions:
         type: incident
         required: true
         example: {"id": "10000","number": "1000","name": "Incident Name","description": "description","state": "New"}
+  delete_incident:
+    title: Delete Incident
+    description: Delete an incident
+    input:
+      incident_id:
+        title: Incident ID
+        description: The ID of an incident to delete
+        type: integer
+        required: true
+        example: 1234
+    output:
+      success:
+        title: Success
+        description: Was the operation successful?
+        type: boolean
+        required: true
+        example: true
   comment_incident:
     title: Comment Incident
     description: Add a comment to an incident
@@ -557,7 +574,7 @@ actions:
         title: Name
         description: User name
         type: string
-        required: false
+        required: true
         example: Example User
       phone:
         title: Phone
@@ -576,29 +593,18 @@ actions:
         description: Role
         type: string
         required: false
-        enum:
-        - ''
-        - Administrator
-        - Facilities Service Desk User
-        - Human Resources Service Desk User
-        - Read Only
-        - Requester
-        - Service Agent User
-        - Service Task User
-        - Users Own Site
-        example: Administrator
+        example: Requester
       department:
         title: Department
         description: Department
         type: string
         required: false
-        enum:
-        - ''
-        - Facilities
-        - Finance
-        - Human Resources
-        - Information Technology
-        - Marketing
+        example: Marketing
+      site:
+        title: Site
+        description: Site
+        type: string
+        required: false
         example: Marketing
     output:
       user:
