Updated example for validation check

--- a/plugins/samanage/plugin.spec.yaml
+++ b/plugins/samanage/plugin.spec.yaml
@@ -605,7 +605,7 @@ actions:
         description: Site
         type: string
         required: false
-        example: Marketing
+        example: Boston
     output:
       user:
         title: User
