--- a/plugins/samanage/plugin.spec.yaml
+++ b/plugins/samanage/plugin.spec.yaml
@@ -7,7 +7,7 @@ description: The Solarwinds plugin allows you to start workflows on new incident
 version: 2.0.0
 vendor: rapid7
 support: community
-supported_versions: ["All"]
+supported_versions: ["API version 2.1"]
 status: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/samanage
